# BIDS-converter

./: README.md  pyproject.toml
beh/: beh_bids_converter.py  bids_sidecar_events.py  helper_function.py  logs_metadata_prp.py
bids_converter/: __init__.py  bids.py
bids_converter/beh/: __init__.py  convert_beh.py
bids_converter/example_var/: __init__.py  logs_metadata_prp.py  task_desc_prp.py
